[gd_scene load_steps=13 format=3 uid="uid://bkmrvxji2d0su"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_fhc2r"]
[ext_resource type="Script" path="res://player_initializer.gd" id="2_jcqgw"]
[ext_resource type="PackedScene" uid="uid://y2n3t04hbrp3" path="res://credits.tscn" id="2_lgufh"]
[ext_resource type="Shader" path="res://water.gdshader" id="3_acwfq"]
[ext_resource type="PackedScene" uid="uid://7klas3s0i4f5" path="res://settings.tscn" id="3_cwwne"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u1bq4"]
size = Vector2(100, 100)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3hrpu"]
render_priority = 0
shader = ExtResource("3_acwfq")
shader_parameter/WATER_COL = Color(0.04, 0.38, 0.88, 1)
shader_parameter/WATER2_COL = Color(0.04, 0.35, 0.78, 1)
shader_parameter/FOAM_COL = Color(0.8125, 0.9609, 0.9648, 1)
shader_parameter/distortion_speed = 2.0
shader_parameter/wave_speed = 1.5
shader_parameter/ratio = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tv442"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_n5k0e"]
size = Vector3(20, 5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ytr5q"]
size = Vector3(55, 5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_p00nv"]
size = Vector3(1, 5, 64)

[sub_resource type="BoxShape3D" id="BoxShape3D_dw725"]
size = Vector3(79.8242, 5, 1)

[node name="Base" type="Node3D"]

[node name="MainMenu" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_fhc2r")

[node name="main" type="HBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/main"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Water Tanks!"

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/main/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonStart" type="Button" parent="MainMenu/main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Start"
flat = true
alignment = 0
icon_alignment = 2

[node name="LvlsDisplay" type="Label" parent="MainMenu/main/VBoxContainer/ButtonStart"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Lvls: -1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ButtonSettings" type="Button" parent="MainMenu/main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Settings
"
flat = true
alignment = 0
icon_alignment = 2

[node name="ButtonCredits" type="Button" parent="MainMenu/main/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Credits"
flat = true
alignment = 0
icon_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/main"]
layout_mode = 2

[node name="credits" parent="MainMenu" instance=ExtResource("2_lgufh")]
visible = false
layout_mode = 2
alignment = 0

[node name="settings" parent="MainMenu" instance=ExtResource("3_cwwne")]
visible = false
layout_mode = 2
alignment = 0

[node name="Backdrop" type="Node3D" parent="."]

[node name="SpawnPoints" type="Node" parent="Backdrop"]
script = ExtResource("2_jcqgw")

[node name="Sp0" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 8.2846)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp1" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0.2846)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp2" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -7.7154)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp3" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -15.7154)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp4" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, 0.2846)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp5" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -7.7154)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp5"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp6" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -14.7154)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp6"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp7" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, -22.7154)

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp7"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="Sp8" type="Marker3D" parent="Backdrop/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, -22.7154)
visible = false

[node name="SpotLight3D" type="SpotLight3D" parent="Backdrop/SpawnPoints/Sp8"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.10579, -0.2846)
light_energy = 10.0
light_indirect_energy = 3.0
spot_range = 11.115
spot_angle = 21.3733

[node name="MeshInstance3D" type="MeshInstance3D" parent="Backdrop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.6546, 0, -25.4764)
mesh = SubResource("PlaneMesh_u1bq4")
surface_material_override/0 = SubResource("ShaderMaterial_3hrpu")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Backdrop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50.3454, 0, -25.4764)
material_override = SubResource("StandardMaterial3D_tv442")
mesh = SubResource("PlaneMesh_u1bq4")
surface_material_override/0 = SubResource("ShaderMaterial_3hrpu")

[node name="Camera3D" type="Camera3D" parent="Backdrop"]
transform = Transform3D(1, 0, 0, 0, 0.690188, 0.72363, 0, -0.72363, 0.690188, -0.321619, 8.05215, 15.0305)

[node name="StaticBody3D" type="StaticBody3D" parent="Backdrop"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Backdrop/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 16)
shape = SubResource("BoxShape3D_n5k0e")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Backdrop/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.5, 0, -36)
shape = SubResource("BoxShape3D_ytr5q")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Backdrop/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -15)
shape = SubResource("BoxShape3D_p00nv")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Backdrop/StaticBody3D"]
transform = Transform3D(0.655479, 0, 0.755213, 0, 1, 0, -0.755213, 0, 0.655479, 35.0229, 0, -13.3778)
shape = SubResource("BoxShape3D_dw725")

[connection signal="pressed" from="MainMenu/main/VBoxContainer/ButtonStart" to="MainMenu" method="_start_game"]
[connection signal="pressed" from="MainMenu/main/VBoxContainer/ButtonSettings" to="MainMenu" method="_on_toggle_settings"]
[connection signal="pressed" from="MainMenu/main/VBoxContainer/ButtonCredits" to="MainMenu" method="_on_toggle_credits"]
[connection signal="pressed" from="MainMenu/credits/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="MainMenu" method="_on_toggle_credits"]
[connection signal="pressed" from="MainMenu/settings/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="MainMenu" method="_on_toggle_settings"]

[editable path="MainMenu/credits"]
[editable path="MainMenu/settings"]
